tekton/base/trigger/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: event-listener
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: <Replace with your host addresss>
      http:
        paths:
          - path: /
            backend:
              serviceName: el-event-listener
              servicePort: 8080
